--- a/apps/note_area/static/css/note_style.css
+++ b/apps/note_area/static/css/note_style.css
@@ -13,7 +13,7 @@
 /* 每一個區域 */
 .region-container {
     width: 100%; /* Fixed width */
-    height: 200px; /* Fixed height */  /* 筆電測試: 如果按鈕比較少, 沒有水平拉條出現就用92px. 如果按鈕多到水平拉條跑出來的話, 就用108px */
+    height: 230px; /* Fixed height */  /* 筆電測試: 如果按鈕比較少, 沒有水平拉條出現就用92px. 如果按鈕多到水平拉條跑出來的話, 就用108px */
                                        /* 桌機測試: 如果按鈕比較少, 沒有水平拉條出現就用136px. 如果按鈕多到水平拉條跑出來的話, 就用144px */
     overflow-x: auto; /* Enable scrolling in x direction */
     overflow-y: hidden; /* disable scrolling in y direction */
@@ -32,7 +32,7 @@
     font-size: 1.7rem;
     color: #1a1a1a;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    margin-bottom: 1rem;
+    margin-top: 1rem;
     display: inline-block;
     margin-left: auto; /* Center the element horizontally */
     margin-right: auto; /* Center the element horizontally */
@@ -69,11 +69,12 @@
     left: 3px;
     top: 57%;*/
     font-size: 20px; /* Adjusted size */
-    /*transform: translateY(-50%);*/
+    transform: translateY(-45%);
     color: #888;
 }
 
 .search-input {
+    margin-left: 5px;
     padding-left: 5px; /* Adjust as needed */
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -81,4 +82,22 @@
     width: 150px;
     font-size: 18px;
     outline: none;
+}
+
+/* show-more圖標的hover效果 */
+.show-more {
+    position: relative;
+    cursor: pointer;
+}
+
+.show-more:hover::after {
+    content: "展示全部";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
 }
