start of note area

--- a/apps/exercise_area/static/css/exercise_style.css
+++ b/apps/exercise_area/static/css/exercise_style.css
@@ -203,3 +203,21 @@ th, td {
 .dropdown-content a:hover {
     background-color: #f1f1f1;
 }
+
+/* more的hover效果 */
+.show-more {
+    position: relative;
+    cursor: pointer;
+}
+
+.show-more:hover::after {
+    content: "展示全部";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
