--- a/apps/exercise_area/templates/exercise.html
+++ b/apps/exercise_area/templates/exercise.html
@@ -12,7 +12,7 @@ active
 
   {% block css %}
 
-  <link rel="stylesheet" href="{% static 'css/exercise_style1.css' %}">
+  <link rel="stylesheet" href="{% static 'css/exercise_style.css' %}">
 
   {% endblock css %}
 
